changed fxml layout and adds style.css